# MahjongRiskAnalysis

./: README.md  pyproject.toml
src/MahjongRiskAnalysis/augment/: game_log.py  mahjong_log_augmenter_skeleton.py
src/MahjongRiskAnalysis/config/: augmenter.py
tests/: download.py
tests/augment/: game_log.py
