[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project]
name = 'MRA'
version = '0.0.3'
description = 'Data-driven analysis of discard risk in Mahjong using machine learning with Tenhou game logs.'

readme = 'README.md'
license = {file='LICENSE'}

requires-python = '>=3.12'
dependencies = [
    "TenhouAPI@git+https://github.com/AtoKashinoki/TenhouAPI.git"
]

authors = [
   {name='AtoKashinoki', email='atokashinoki@gmail.com'}
]
classifiers = [
   'Development Status :: 3 - Alpha',
   'Intended Audience :: Developers',
   'License :: OSI Approved :: MIT License',
   'Natural Language :: Jamanese',
   'Operating System :: OS Independent',
   'Programming Language :: Python :: 3.13',
   'Programming Language :: Python :: Implementation :: CPython',
   'Topic :: Software Development :: Libraries :: Python Modules',
]


[project.urls]
'Homepage' = 'https://github.com/AtoKashinoki/TenhouAPI'
'Bug Traker' = 'https://github.com/AtoKashinoki/TenhouAPI/issues'
'Documentation' = 'https://github.com/AtoKashinoki/TenhouAPI'
'Source' = 'https://github.com/AtoKashinoki/TenhouAPI.git'


[project.scripts]
